--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/duration.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script
+        src=" https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js "></script>
+    <script src=" https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js "></script>
+
+</head>
 <div>
     <div style="width: 1080px;"><canvas id="waka"></canvas></div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="dataloader.js"></script>
 
 <script src="chart.js"></script>
