--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <div>
-    <div style="width: 1080px;"><canvas id="waka"></canvas></div>
+    <div style="width: 100%;"><canvas id="waka"></canvas></div>
 </div>
 
 <script src="dataloader.js"></script>
